correction on portfolio section, alignling images properly

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@
   justify-content: center;
 }
 .portfolio-text {
-  margin-left: 100px;
+  margin-left: 58px;
 }
 #portfolio-section .portfolio-text h3 {
   color: #f00;
@@ -288,10 +288,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around 24px;
+  justify-content: space-around;
 }
 .portfolio-img img {
   width: 424px;
   height: 450px;
   flex-shrink: 0;
+}
+.portfolio-img-sec1 {
+  gap: 24px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.portfolio-img-sec2 {
+  margin-top: 24px;
+  gap: 24px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
